# Langchian_Rag

./: README_FastAPI.md  app_fastapi.py  chat_service.py  pyproject.toml  requirements.txt  vercel.json
api/: app_fastapi.py
static/css/: style.css
static/js/: app.js
templates/: index.html
